; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sunrpc/extr_cache.c_release_flush_procfs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sunrpc/extr_cache.c_release_flush_procfs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { i32 }
%struct.cache_detail = type { i32 }
%struct.TYPE_2__ = type { %struct.cache_detail* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @release_flush_procfs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @release_flush_procfs(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca %struct.inode*, align 8
  %4 = alloca %struct.file*, align 8
  %5 = alloca %struct.cache_detail*, align 8
  store %struct.inode* %0, %struct.inode** %3, align 8
  store %struct.file* %1, %struct.file** %4, align 8
  %6 = load %struct.inode*, %struct.inode** %3, align 8
  %7 = call %struct.TYPE_2__* @PDE(%struct.inode* %6)
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load %struct.cache_detail*, %struct.cache_detail** %8, align 8
  store %struct.cache_detail* %9, %struct.cache_detail** %5, align 8
  %10 = load %struct.inode*, %struct.inode** %3, align 8
  %11 = load %struct.file*, %struct.file** %4, align 8
  %12 = load %struct.cache_detail*, %struct.cache_detail** %5, align 8
  %13 = call i32 @release_flush(%struct.inode* %10, %struct.file* %11, %struct.cache_detail* %12)
  ret i32 %13
}

declare dso_local %struct.TYPE_2__* @PDE(%struct.inode*) #1

declare dso_local i32 @release_flush(%struct.inode*, %struct.file*, %struct.cache_detail*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
